fix older MC version compiling